discussion/kv_engine/156115/156115_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-42657: Write crash log messages to separate file

It is safe for the signal handler to use open/write/close, so to
enhance the current signal safe crash handler:

1) opens a new file "<logdir>/memcached.breakpad.crash.txt"
2) Dupe the stderr messages to the new file
3) On start-up check for the file and clone the contents to
the memcached.log

The result is that the memcached log is improved from the
prior state in that it will now contain a good indication
that a crash occurred (allowing existing tools which may
grep the logs to continue working).

Change-Id: I733f300befd5e91dcec5f2ca899540016bd72fb7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-21 13:24:57.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-21 13:35:43.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10080/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:293:1: error: extraneous closing brace ("}") [clang-diagnostic-error]
}
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10080/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:293:1:
error: extraneous closing brace ("}") [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10080/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37107/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37107/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31685/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/breakpad.cc:293:1:
error: extraneous closing brace ("}")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31685/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8675/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/utilities/breakpad.cc b/utilities/breakpad.cc
index e72c1b32a..c6ad36bca 100644
--- a/utilities/breakpad.cc
+++ b/utilities/breakpad.cc
@@ -288,9 +288,9 @@ void cb::breakpad::initialize(const cb::breakpad::Settings&amp; settings,
 
     if (checkForCrash) {
         logCrashData();
-        }
     }
 }
+}
 
 void cb::breakpad::destroy() {
     if (handler) {

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8675/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11800/ : FAILURE

Compile error at [2021-06-21T13:25:56.050Z] ../kv_engine/utilities/breakpad.cc:293:1:
error: expected declaration before ?}? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11800/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11649/ : FAILURE

Compile error at [2021-06-21T13:25:50.384Z] ../kv_engine/utilities/breakpad.cc:293:1:
error: expected declaration before ?}? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11649/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12091/ : FAILURE

Compile error at [2021-06-21T13:25:53.396Z] ../kv_engine/utilities/breakpad.cc:293:1:
error: extraneous closing brace ("}")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12091/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10731/ : FAILURE

Compile error at [2021-06-21T13:26:26.226Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/utilities/breakpad.cc:293:1:
error: extraneous closing brace ("}")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10731/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19676/ : FAILURE

Compile error at [2021-06-21T13:26:14.449Z] ../kv_engine/utilities/breakpad.cc:293:1:
error: extraneous closing brace ("}")
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19676/ )

http://cv.jenkins.couchbase.com/job/ming-test2/573/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
